--- a/css/style.css
+++ b/css/style.css
@@ -973,3 +973,20 @@ hr {
   margin-right: 8px;
   color: #6070ff;
 }
+
+.detail-button1 {
+  box-sizing: border-box;
+  background-color: white;
+  align-items: center;
+  padding: 8px;
+  width: 110px;
+  height: 48px;
+  left: 0;
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 20px;
+  letter-spacing: 0.03em;
+  color: #396df2;
+}
